元空间参数诊断兼容jdk7和jdk8